[gd_scene load_steps=3 format=3 uid="uid://dlobmc4yyvjao"]

[ext_resource type="Script" path="res://UI/Scripts/settings_button.gd" id="1_rylbf"]
[ext_resource type="Texture2D" uid="uid://dnqerhtetyeny" path="res://Sprites/UI/settingsplaceholder2.png" id="2_qxhky"]

[node name="SettingsButton" type="TextureButton"]
texture_normal = ExtResource("2_qxhky")
script = ExtResource("1_rylbf")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
